# RED4ext

./: .gitmodules  CMakeLists.txt  RED4ext.code-workspace  compile_commands.json
cmake/: ConfigureAndIncludeCatch2.cmake
src/dll/: App.cpp  CMakeLists.txt
src/loader/: CMakeLists.txt
tests/: CMakeLists.txt  Test.cpp
